Added content, layout, and basic styles

--- a/index.html
+++ b/index.html
@@ -3,16 +3,58 @@
   <head>
     <meta charset="utf-8">
     <title>Grammar Site: A Test</title>
+    <link rel = "stylesheet" type = "text/css" href = "styles.css" />
   </head>
   <body>
-    <h1>Test your Grammar</h1>
+    <div class='navbar'>
+      <div class='nav-links'>
+        <a href=''>Learn</a>
+        <a href=''>Drill</a>
+        <a href=''>Test</a>
+        <a href=''>Shop</a>
+      </div>
+    </div>
+
+    <div class='main'>
+      <div class='content'>
+        <h2>Present Perfect: Check</h2>
+        <p>Complete the following sentence with the verb in the correct form:</p>
+        <ol>
+          <li><span class="checkbox">[ ]</span> I <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  English for five years.</li>
+          <li><span class="checkbox">[ ]</span> She <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  snow.</li>
+          <li><span class="checkbox">[ ]</span> Andrew <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  Harry Potter three times.</li>
+          <li><span class="checkbox">[ ]</span> They <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  each other all their lives.</li>
+          <li><span class="checkbox">[ ]</span> Her eyes are red because she <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" /> .</li>
+          <li><span class="checkbox">[ ]</span> We <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  the same teacher for two years now.</li>
+          <li><span class="checkbox">[ ]</span> I <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  this movie before.</li>
+          <li><span class="checkbox">[ ]</span> The car <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" />.</li>
+        </ol>
+
+      </div>
+      <div class='profile'>
+        <h2>Profile Bar</h2>
+        <p>Username: wanderer</p>
+        <p>Level: B2</p>
+        <p>Current Score: </p>
+      </div>
+    </div>
+    <div class='footer'>
+      <div class='footer-content'>
+        <a href=''>About</a>
+        <a href=''>Terms</a>
+        <a href=''>Privacy</a>
+        <a href=''>Tips</a>
+      </div class='footer-content'>
+    </div>
+
+    <!-- <h1>Test your Grammar</h1>
     <p>Complete the following sentence with the verb in the correct form:</p>
 
     <form name='cloze' action="" method="get">
       <p><span id="checkbox">[ ]</span> I <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" /> to code for about six months now.
         </p>
       <button name='submit' form='cloze' value='' onclick="checkAnswer(getElementById('attempt').value)">Check</button>
-    </form>
+    </form> -->
 
     <script type='text/javascript' src='main.js'></script>
   </body>
