Use JS to add unique ID to each sentence

--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
         <h2>Present Perfect: Check</h2>
         <p>Complete the following sentence with the verb in the correct form:</p>
         <ol>
-          <li><span class="checkbox">[ ]</span> I <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  English for five years.</li>
-          <li><span class="checkbox">[ ]</span> She <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  snow.</li>
-          <li><span class="checkbox">[ ]</span> Andrew <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  Harry Potter three times.</li>
-          <li><span class="checkbox">[ ]</span> They <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  each other all their lives.</li>
-          <li><span class="checkbox">[ ]</span> Her eyes are red because she <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" /> .</li>
-          <li><span class="checkbox">[ ]</span> We <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  the same teacher for two years now.</li>
-          <li><span class="checkbox">[ ]</span> I <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  this movie before.</li>
-          <li><span class="checkbox">[ ]</span> The car <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" />.</li>
+          <li><span class='checkbox'>[ ]</span> I <input type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  English for five years.
+          </li>
+          <li><span class='checkbox'>[ ]</span> She <input type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  snow.</li>
+          <li><span class='checkbox'>[ ]</span> Andrew <input type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  Harry Potter three times.</li>
+          <li><span class='checkbox'>[ ]</span> They <input  type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  each other all their lives.</li>
+          <li><span class='checkbox'>[ ]</span> Her eyes are red because she <input  type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" /> .</li>
+          <li><span class="checkbox">[ ]</span> We <input  type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  the same teacher for two years now.</li>
+          <li><span class='checkbox'>[ ]</span> I <input  type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  this movie before.</li>
+          <li><span class='checkbox'>[ ]</span> The car <input  type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" />.</li>
         </ol>
 
       </div>
@@ -50,8 +51,8 @@
     <!-- <h1>Test your Grammar</h1>
     <p>Complete the following sentence with the verb in the correct form:</p>
 
-    <form name='cloze' action="" method="get">
-      <p><span id="checkbox">[ ]</span> I <input type='text' id='attempt' name='attempt' value='' form='cloze' required maxlength="20" /> to code for about six months now.
+    <form  action="" method="get">
+      <p><span id="checkbox">[ ]</span> I <input type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" /> to code for about six months now.
         </p>
       <button name='submit' form='cloze' value='' onclick="checkAnswer(getElementById('attempt').value)">Check</button>
     </form> -->
