Major overhaul: Sentences now generated with input fields

--- a/index.html
+++ b/index.html
@@ -19,16 +19,10 @@
       <div class='content'>
         <h2>Present Perfect: Check</h2>
         <p>Complete the following sentence with the verb in the correct form:</p>
-        <ol>
-          <li><span class='checkbox'>[ ]</span> I <input type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  English for five years.
-          </li>
-          <li><span class='checkbox'>[ ]</span> She <input type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  snow.</li>
-          <li><span class='checkbox'>[ ]</span> Andrew <input type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  Harry Potter three times.</li>
-          <li><span class='checkbox'>[ ]</span> They <input  type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  each other all their lives.</li>
-          <li><span class='checkbox'>[ ]</span> Her eyes are red because she <input  type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" /> .</li>
-          <li><span class="checkbox">[ ]</span> We <input  type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  the same teacher for two years now.</li>
-          <li><span class='checkbox'>[ ]</span> I <input  type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" />  this movie before.</li>
-          <li><span class='checkbox'>[ ]</span> The car <input  type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" />.</li>
+
+        <ol class='sentence-list'>
+
+
         </ol>
 
       </div>
@@ -52,9 +46,9 @@
     <p>Complete the following sentence with the verb in the correct form:</p>
 
     <form  action="" method="get">
-      <p><span id="checkbox">[ ]</span> I <input type='text' class='attempt' name='attempt' value='' form='cloze' required maxlength="20" /> to code for about six months now.
+      <p><span id="checkbox">[ ]</span> I <input type='text' class='attempt' name='attempt' value='' required maxlength="20" /> to code for about six months now.
         </p>
-      <button name='submit' form='cloze' value='' onclick="checkAnswer(getElementById('attempt').value)">Check</button>
+      <button name='submit' value='' onclick="checkAnswer(getElementById('attempt').value)">Check</button>
     </form> -->
 
     <script type='text/javascript' src='main.js'></script>
