Added JS function to evaluate answers and give feedback

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
     <div class='main'>
       <div class='content'>
-        <h2>Present Perfect: Check</h2>
+        <h2>Present Perfect Simpe vs Continuous</h2>
         <p>Complete the following sentence with the verb in the correct form:</p>
 
         <ol class='sentence-list'>
-
-
+          <!--Populated by JS function-->
         </ol>
+        <button id="btn" name='check' value=''>Check</button>
 
       </div>
       <div class='profile'>
@@ -41,15 +41,6 @@
         <a href=''>Tips</a>
       </div class='footer-content'>
     </div>
-
-    <!-- <h1>Test your Grammar</h1>
-    <p>Complete the following sentence with the verb in the correct form:</p>
-
-    <form  action="" method="get">
-      <p><span id="checkbox">[ ]</span> I <input type='text' class='attempt' name='attempt' value='' required maxlength="20" /> to code for about six months now.
-        </p>
-      <button name='submit' value='' onclick="checkAnswer(getElementById('attempt').value)">Check</button>
-    </form> -->
 
     <script type='text/javascript' src='main.js'></script>
   </body>
